--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
   },
   "devDependencies": {
     "react-scripts": "4.0.3",
-    "nth-check": " 1.0.2"
+    "nth-check": " 2.0.1",
+    "shell-quote": "1.7.3",
+    "ejs": "3.1.7",
+    "immer": "9.0.6",
+    "node-forge": "1.3.0",
+    "ansi-html": "0.0.8",
+    "glob-parent": "5.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
